<resources>
    <string name="app_name">DailyPlanner</string>
    <string name="main_text">Чё каво!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_home_title">Главная</string>
    <string name="navigation_education_title">Учебный</string>
    <string name="navigation_usual_title">Простой</string>
    <string name="navigation_calendar_title">Календарь</string>
    <string name="navigation_notes_title">Заметки</string>
    <string name="navigation_settings_title">Настройки</string>
    <string name="enter_text">Введите текст заметки...</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="name_schedule">Название заметки</string>
    <string name="text_schedule">Текст заметки</string>
    <string name="place">Корпус</string>
    <string name="lecture_hall">Аудитория</string>
    <string name="delete">Удалить</string>
    <string name="_9_00">9:00</string>
    <string name="_18_00">18:00</string>
    <string name="_08_30">08:30</string>
    <string name="_10_00">10:00</string>
    <string name="start_time">Начало</string>
    <string name="end_time">Конец</string>
    <string name="time_word">Время</string>
    <string name="e_mail">Почта</string>
    <string name="your_name">Ваше имя</string>
    <string name="example_mail">xxxxxxxxxxxx@xxxx.xx</string>
    <string name="edit_ic">edit_ic</string>
    <string name="setting_account">Аккаунт</string>
    <string name="setting_notifications">Уведомления</string>
    <string name="setting_geolocation">Конфиденциальность</string>
    <string name="about_app">О приложении</string>
    <string name="more">Подробнее</string>
    <string name="hh_mm">hh:mm</string>
    <string name="registration">Регистрация</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="log_in_or_services">Или войдите через:</string>
    <string name="login_word">Вход</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="create">Создать</string>
    <string name="exit">Выйти</string>
    <string name="tasks">Задачи</string>
    <string name="repetition_method">Метод повторения</string>
    <string name="name_and_form_of_the_lesson">Название и тип занятия</string>
    <string name="name_lesson">Название предмета</string>
    <string name="files">Файлы</string>
    <string name="full_name_teacher">ФИО преподавателя</string>
    <string name="type_lessons">Тип учебного занятия</string>
    <string name="add">Добавить</string>
    <string name="ok">OK</string>
    <string name="practical_lesson">Практическое занятие</string>
    <string name="lecture_session">Лекционное занятие</string>
    <string name="laboratory_work">Лабораторная работа</string>
    <string name="tasks_for_the_day">Цель на день</string>
    <string name="name_of_the_schedule">Название заметки</string>
    <string name="enter_ru">Ввод</string>
    <string name="description">Описание</string>
</resources>