<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:gravity="center"
        android:icon="@drawable/ic_home"
        android:title="@string/navigation_education_title" />
    <item
        android:id="@+id/navigation_calendar"
        android:gravity="center"
        android:icon="@drawable/ic_calendar"
        android:title="@string/navigation_calendar_title" />

    <item
        android:id="@+id/navigation_add"
        android:gravity="center"
        android:title="" />

    <item
        android:id="@+id/navigation_notes"
        android:gravity="center"
        android:icon="@drawable/ic_notes"
        android:title="@string/navigation_notes_title" />
    <item
        android:id="@+id/navigation_settings"
        android:gravity="center"
        android:icon="@drawable/ic_settings"
        android:title="@string/navigation_settings_title" />
</menu>