<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_and_edit_schedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".ui.schedule.ScheduleEditFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_edit_schedule"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/save"
            android:textColor="@color/blue"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_element_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/corner_background"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_edit_schedule">
        <EditText
            android:id="@+id/name_lesson_schedule"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="text"
            android:background="@color/transparent"
            android:hint="@string/name_lesson"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:scrollHorizontally="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/line_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:id="@+id/line_dialog"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray"
            app:layout_constraintBottom_toTopOf="@id/teachers_name_schedule"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_lesson_schedule" />
        <EditText
            android:id="@+id/teachers_name_schedule"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="text"
            android:background="@color/transparent"
            android:hint="@string/full_name_teacher"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:scrollHorizontally="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/line_dialog1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_dialog" />
        <View
            android:id="@+id/line_dialog1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray"
            app:layout_constraintBottom_toTopOf="@id/type_lessons_schedule"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/teachers_name_schedule" />
        <TextView
            android:id="@+id/type_lessons_schedule"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="text"
            android:background="@color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left|center"
            android:hint="@string/type_lessons"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_dialog1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/place_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/corner_background"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/element_schedule_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_element_new">
        <EditText
            android:id="@+id/corpus_schedule"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="text"
            android:background="@color/transparent"
            android:hint="@string/place"
            android:inputType="textCapSentences"
            android:maxLength="8"
            android:maxLines="1"
            android:scrollHorizontally="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/lecture_hall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="text"
            android:background="@color/transparent"
            android:hint="@string/lecture_hall"
            android:inputType="textCapSentences"
            android:maxLength="8"
            android:maxLines="1"
            android:scrollHorizontally="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/element_schedule_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/corner_background"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_schedule">
        <TextView
            android:id="@+id/time_word"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:text="@string/time_word"
            app:layout_constraintHorizontal_weight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/selection_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/selection_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/time_word"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/line2"
                app:layout_constraintEnd_toStartOf="@id/start_time_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/start_time_edit"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/corner_background_time"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_08_30"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/line2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <View
                android:id="@+id/line2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/dark_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/end_time_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line2" />
            <TextView
                android:id="@+id/end_time_edit"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/corner_background_time"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_10_00"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/start_time_edit"
                app:layout_constraintStart_toStartOf="@id/start_time_edit"
                app:layout_constraintTop_toBottomOf="@id/line2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/delete_schedule"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/corner_background_button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/red"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>