<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C1E"
    tools:context=".ui.notes.NotesEditFragment">

    <Button
        android:id="@+id/cancel_note"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/transparent"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/edit_title_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_note"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/transparent"
        android:text="@string/save"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edit_title_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_title_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:background="@color/gray"
        android:gravity="center"
        android:hint="Введите название заметки"
        android:inputType="textCapSentences"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:scrollHorizontally="false"
        android:textColor="@color/white"
        android:textColorHint="@color/bright_gray"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_note" />

    <EditText
        android:id="@+id/edit_text_note"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:autofillHints="text"
        android:background="@color/transparent"
        android:gravity="top"
        android:hint="@string/enter_text"
        android:inputType="textCapSentences|textMultiLine"
        android:padding="20dp"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:textColor="@color/white"
        android:textColorHint="@color/bright_gray"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/edit_title_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tools_menu_note"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tools_menu_note"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/delete_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="24sp"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>